# file-matcher-rs

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
src/: alias.rs  error.rs  lib.rs  utils.rs
src/actions/: copier.rs  mod.rs  mover.rs
src/entries/: entry.rs  many.rs  mod.rs  one.rs
src/files/: many.rs  mod.rs  one.rs
src/filters/: many.rs  mod.rs  one.rs
src/finders/: mod.rs  regex_finder.rs  wildmatch_finder.rs
tests/: copier.rs  matcher.rs
