[package]
name = "file-matcher"
description = "A library to search files and folders based on the name pattern (regex, wildmatch, exact)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/feenkcom/file-matcher-rs"
repository = "https://github.com/feenkcom/file-matcher-rs"
# 5 max
keywords = ["filesystem", "files", "folders", "find", "search"]
# 6 max
categories = ["filesystem"]

version = "0.7.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2018"

[lib]

[dependencies]
regex = { version = "1", optional = true }
wildmatch = { version = "2", optional = true }
fs_extra = { version = "1.2.0", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
tempdir = "0.3.7"

[features]
copier = [ "fs_extra" ]
mover = [ "fs_extra" ]
all = [ "regex", "wildmatch", "copier", "mover", "serde" ]
default = [ "all" ]